[gd_scene load_steps=10 format=2]

[ext_resource path="res://Properties/Button theme.tres" type="Theme" id=1]
[ext_resource path="res://Plate_produce.gd" type="Script" id=3]
[ext_resource path="res://Progress bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/monofonto.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/LEMONMILK-Regular.otf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1470.0
margin_bottom = -480.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Product name label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.16
custom_fonts/font = SubResource( 1 )
text = "Product"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recipe" type="Control" parent="."]
anchor_left = 0.22
anchor_top = 0.18
anchor_right = 0.78
anchor_bottom = 0.68
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recipe label" type="RichTextLabel" parent="Recipe"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Recipe:[/center]
Metal       0/1 [color=red](0)[/color]
Work        0/2 "
tab_size = 0
text = "Recipe:
Metal       0/1 (0)
Work        0/2 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom lane" type="Control" parent="."]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Amount label" type="Label" parent="Bottom lane"]
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = 30.0
custom_fonts/font = SubResource( 3 )
text = "Stock 15"
valign = 1
clip_text = true

[node name="Price label" type="RichTextLabel" parent="Bottom lane"]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = -20.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]0.228[color=green]$[/color]"
text = "0.228$"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Produce button" type="Button" parent="Bottom lane"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Produce"
__meta__ = {
"_edit_lock_": true
}

[node name="Progress bar" parent="." instance=ExtResource( 4 )]
anchor_top = 0.68
anchor_bottom = 0.75
bars_num = 11
bars_active_num = 0
denied = false

[node name="Visuals" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="LineTop" type="ColorRect" parent="Visuals"]
anchor_right = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 0, 0, 0, 1 )

[node name="LineBottom" type="ColorRect" parent="Visuals"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineLeft" type="ColorRect" parent="Visuals"]
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineRight" type="ColorRect" parent="Visuals"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ready" from="Product name label" to="." method="_on_Product_name_label_ready"]
[connection signal="button_down" from="Bottom lane/Produce button" to="." method="_on_Produce_button_button_down"]
[connection signal="pressed" from="Bottom lane/Produce button" to="." method="_on_Produce_button_pressed"]
[connection signal="ready" from="Progress bar" to="." method="_on_Progress_bar_ready"]
